--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,4 +1,5 @@
 include README.md
 include .gitignore
 include LICENSE
-recursive-include landsat/assests *
+recursive-include landsat *.prj *.sbn *.sbx
+recursive-include landsat *.shp *.xml *.shx *.html *.txt *.dbf
