--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,3 +3,4 @@ include .gitignore
 include LICENSE
 recursive-include landsat/assests *.prj *.sbn *.sbx
 recursive-include landsat/assests *.shp *.xml *.shx *.html *.txt *.dbf
+recursive-include docs *.html
