--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-GDAL==1.11.0
+GDAL
 elasticsearch==1.1.1
 gsutil==4.4
 requests==2.3.0
-python-dateutil==2.2
+python-dateutil==2.4
 nose==1.3.3
 pdoc==0.2.4
 numpy
