--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,10 @@
-include README.md
-include .gitignore
+include AUTHORS.txt
 include LICENSE
-recursive-include landsat/assests *.prj *.sbn *.sbx
-recursive-include landsat/assests *.shp *.xml *.shx *.html *.txt *.dbf
-recursive-include doc *.html
+include README.md
+
+recursive-include tests *
+recursive-exclude * __pycache__
+recursive-exclude * *.py[co]
+
+recursive-include docs *.rst conf.py Makefile make.bat
+recursive-include landsat/tests/samples *.tar.bz2
