use request 2.5.3 on travis test

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
 
 # Install packages
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image requests six nose dateutil
+  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image requests=2.5.3 six nose dateutil
   - conda install --yes -c https://conda.binstar.org/osgeo gdal
   - pip install --install-option="--no-cython-compile" cython
   - pip install -r requirements/travis.txt
