--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ install:
   - conda install --yes -c https://conda.binstar.org/osgeo gdal
   - pip install --install-option="--no-cython-compile" cython
   - pip uninstall requests --yes
-  - pip install requests==
+  - pip install requests==2.5.3
   - pip install -r requirements/travis.txt
 
 script:
