--- a/.travis.yml
+++ b/.travis.yml
@@ -1,30 +1,33 @@
 language: python
-
 python:
-  - '2.7'
-
-# Setup anaconda
+- '2.7'
 before_install:
-  - sudo add-apt-repository -y ppa:ubuntugis/ppa
-  - sudo apt-get update -qq
-  - sudo apt-get install libgdal1h gdal-bin libgdal-dev libcurl4-gnutls-dev
-  - wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-  - chmod +x miniconda.sh
-  - ./miniconda.sh -b
-  - export PATH=/home/travis/miniconda/bin:$PATH
-  - conda update --yes conda
-  # The next couple lines fix a crash with multiprocessing on Travis and are not specific to using Miniconda
-  - sudo rm -rf /dev/shm
-  - sudo ln -s /run/shm /dev/shm
-
-# Install packages
+- sudo add-apt-repository -y ppa:ubuntugis/ppa
+- sudo apt-get update -qq
+- sudo apt-get install libgdal1h gdal-bin libgdal-dev libcurl4-gnutls-dev
+- wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
+- chmod +x miniconda.sh
+- "./miniconda.sh -b"
+- export PATH=/home/travis/miniconda/bin:$PATH
+- conda update --yes conda
+- sudo rm -rf /dev/shm
+- sudo ln -s /run/shm /dev/shm
 install:
-  - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image six nose dateutil
-  - conda install --yes -c https://conda.binstar.org/osgeo gdal
-  - pip install --install-option="--no-cython-compile" cython
-  - pip uninstall requests --yes
-  - pip install requests==2.5.3
-  - pip install -r requirements/travis.txt
-
+- conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image
+  six nose dateutil
+- conda install --yes -c https://conda.binstar.org/osgeo gdal
+- pip install --install-option="--no-cython-compile" cython
+- pip uninstall requests --yes
+- pip install requests==2.5.3
+- pip install -r requirements/travis.txt
 script:
-  - nosetests
+- nosetests
+deploy:
+  provider: pypi
+  user: devseed
+  password:
+    secure: WtawFW/999XYszmZfj1Qk82l00OSyP2JBVOOGCERrW1gVO7MYtYsgP31HKRSzNTCTHJNVDpdK4WZWY6zPQqC3l2UfWYYsvRn0hCoI8AJxE5VCUEg6Ccpe6fMJuhp1pq6Zy7yrfBSZcOB9aqSHLBJsunD2o3mNlTC8WV8vNK74ck=
+  on:
+    tags: true
+    repo: developmentseed/landsat-util
+    branch: master
