--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,13 @@
 language: python
+
 python:
 - '2.7'
+
+sudo: required
+
+services:
+- docker
+
 before_install:
 - sudo add-apt-repository -y ppa:ubuntugis/ppa
 - sudo apt-get update -qq
@@ -12,6 +19,7 @@ before_install:
 - conda update --yes conda
 - sudo rm -rf /dev/shm
 - sudo ln -s /run/shm /dev/shm
+
 install:
 - conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image
   six nose dateutil
@@ -20,8 +28,10 @@ install:
 - pip uninstall requests --yes
 - pip install requests==2.5.3
 - pip install -r requirements/travis.txt
+
 script:
 - nosetests
+
 deploy:
   provider: pypi
   user: devseed
@@ -31,3 +41,11 @@ deploy:
     tags: true
     repo: developmentseed/landsat-util
     branch: master
+
+after_deploy:
+    if [ "$TRAVIS_BRANCH" == "master" ]; then
+        echo "Start Docker Hub Push"
+        docker build . -t developmentseed/landsat-util:0.7.0
+        docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
+        docker push developmentseed/landsat-util:0.7.0
+    fi
