--- a/.travis.yml
+++ b/.travis.yml
@@ -1,33 +1,36 @@
 language: python
 
+sudo: false
+
+cache:
+  directories:
+    - ~/.cache/pip
+
+env:
+  global:
+    - PIP_WHEEL_DIR=$HOME/.cache/pip/wheels
+    - PIP_FIND_LINKS=file://$HOME/.cache/pip/wheels
+
+addons:
+  apt:
+    packages:
+    - libgdal1h
+    - gdal-bin
+    - libgdal-dev
+    - libatlas-dev
+    - libatlas-base-dev
+    - gfortran
+
 python:
 - '2.7'
 
-sudo: required
-
-services:
-- docker
-
 before_install:
-- sudo add-apt-repository -y ppa:ubuntugis/ppa
-- sudo apt-get update -qq
-- sudo apt-get install libgdal1h gdal-bin libgdal-dev libcurl4-gnutls-dev
-- wget http://repo.continuum.io/miniconda/Miniconda-latest-Linux-x86_64.sh -O miniconda.sh
-- chmod +x miniconda.sh
-- "./miniconda.sh -b"
-- export PATH=/home/travis/miniconda/bin:$PATH
-- conda update --yes conda
-- sudo rm -rf /dev/shm
-- sudo ln -s /run/shm /dev/shm
+  - pip install -U pip
+  - pip install wheel
 
 install:
-- conda install --yes python=$TRAVIS_PYTHON_VERSION numpy scipy matplotlib scikit-image
-  six nose dateutil
-- conda install --yes -c https://conda.binstar.org/osgeo gdal
-- pip install --install-option="--no-cython-compile" cython
-- pip uninstall requests --yes
-- pip install requests==2.5.3
-- pip install -r requirements/travis.txt
+  - "pip wheel -r requirements/dev.txt"
+  - "pip install -r requirements/dev.txt"
 
 script:
 - nosetests
@@ -42,10 +45,10 @@ deploy:
     repo: developmentseed/landsat-util
     branch: master
 
-after_deploy:
-    if [ "$TRAVIS_BRANCH" == "master" ]; then
-        echo "Start Docker Hub Push"
-        docker build . -t developmentseed/landsat-util:0.7.0
-        docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
-        docker push developmentseed/landsat-util:0.7.0
-    fi
+# after_deploy:
+#     if [ "$TRAVIS_BRANCH" == "master" ]; then
+#         echo "Start Docker Hub Push"
+#         docker build . -t developmentseed/landsat-util:0.7.0
+#         docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
+#         docker push developmentseed/landsat-util:0.7.0
+#     fi
