--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,8 @@ deploy:
 after_deploy:
   if [ "$TRAVIS_BRANCH" == "master" ]; then
     echo "Start Docker Hub Push"
-    docker build . -t developmentseed/landsat-util:0.7.0
+    VER=$(python -c "import landsat; print landsat.__version__")
+    docker build . -t developmentseed/landsat-util:$VER
     docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
-    docker push developmentseed/landsat-util:0.7.0
+    docker push developmentseed/landsat-util:$VER
   fi
