install twine before travis deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,9 @@ after_success:
 - docker login -e ${DOCKER_EMAIL} -u ${DOCKER_USER} -p ${DOCKER_PASSWORD}
 - docker push developmentseed/landsat-util:travis
 
+before_deploy:
+  - pip install twine
+
 deploy:
   provider: pypi
   user: devseed
