--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,6 @@ env:
 
 
 before_script:
-- pip install twine
 - docker build --file="travis-dockerfile" -t "developmentseed/landsat-util:travis" .
 
 script:
@@ -24,6 +23,7 @@ after_success:
 deploy:
   provider: pypi
   user: devseed
+  edge: true
   password:
     secure: WtawFW/999XYszmZfj1Qk82l00OSyP2JBVOOGCERrW1gVO7MYtYsgP31HKRSzNTCTHJNVDpdK4WZWY6zPQqC3l2UfWYYsvRn0hCoI8AJxE5VCUEg6Ccpe6fMJuhp1pq6Zy7yrfBSZcOB9aqSHLBJsunD2o3mNlTC8WV8vNK74ck=
   on:
