--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,9 @@ env:
   - secure: Zq0Z2UA2A7/ieXX8XoMweClJTp8hiVBxoQ1ylJYNd7qsRSk0QvZhn62db5/x48L9S1kELk0sG64q5Pf96/RPLpdjkBUAdEkS7qF+QOvRvAv2woNEHutjlMUvP6jwYGbug+AORg76btZ57OwMOi3aTkagQMMKnokfo7KGbffy0Jo=
 
 
+install:
+- pip install twine
+
 before_script:
 - docker build --file="travis-dockerfile" -t "developmentseed/landsat-util:travis" .
 
@@ -23,7 +26,6 @@ after_success:
 deploy:
   provider: pypi
   user: devseed
-  edge: true
   password:
     secure: WtawFW/999XYszmZfj1Qk82l00OSyP2JBVOOGCERrW1gVO7MYtYsgP31HKRSzNTCTHJNVDpdK4WZWY6zPQqC3l2UfWYYsvRn0hCoI8AJxE5VCUEg6Ccpe6fMJuhp1pq6Zy7yrfBSZcOB9aqSHLBJsunD2o3mNlTC8WV8vNK74ck=
   on:
