--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -7,4 +7,4 @@ recursive-exclude * __pycache__
 recursive-exclude * *.py[co]
 
 recursive-include docs *.rst conf.py Makefile make.bat
-recursive-include landsat/tests/samples *.tar.bz2
+recursive-include landsat/maps *.txt
