--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -12,3 +12,9 @@ boto==2.39.0
 polyline==1.1
 geocoder==1.9.0
 matplotlib==1.5.1
+pdoc>=0.3.1
+nose>=1.3.7
+coverage>=4.0
+Sphinx>=1.3.1
+wheel>=0.26.0
+mock>=1.3.0
