--- a/circle.yml
+++ b/circle.yml
@@ -6,6 +6,9 @@ dependencies:
   pre:
     - sudo apt-get -y update
     - sudo apt-get install -f --yes libgdal-dev
+    - pip install setuptools
+    - pip install -U pip
+    - pip install wheel
     - pip install -r requirements-dev.txt
     - pip install -e .
 
