--- a/circle.yml
+++ b/circle.yml
@@ -9,6 +9,7 @@ dependencies:
     - pip install setuptools
     - pip install -U pip
     - pip install wheel
+    - pip install cython>=0.21
     - pip install numpy==1.10.4
     - pip install -r requirements-dev.txt
     - pip install -e .
