--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,6 +1,8 @@
 include AUTHORS.txt
 include LICENSE
 include README.md
+include requirements.txt
+include requirements-dev.txt
 
 recursive-include tests *
 recursive-exclude * __pycache__
