--- a/tox.ini
+++ b/tox.ini
@@ -1,13 +1,16 @@
 [tox]
-envlist = 
-    py27
-    py35
+envlist = py27,py34,py35
 
 [testenv]
 deps =
+    wheel
+    pip>=8.1.1
     jsonschema
     mock>=1.3.0
     nose>=1.3.7
     pytest
 commands =
-    py.test
+    pip install -r requirements.txt
+    pip install -e .
+    python setup.py test
+install_command=pip install --process-dependency-links --allow-external --allow-unverified {opts} {packages}
