--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-usgs==0.1.9
-requests==2.7.0
-python-dateutil==2.5.1
-numpy==1.10.4
-termcolor==1.1.0
-rasterio==0.32.0
+usgs>=0.1.9
+requests>=2.7.0
+python-dateutil>=2.5.1
+numpy>=1.10.4
+termcolor>=1.1.0
+rasterio>=0.32.0,<1*
 six>=1.8.0
-scipy==0.17.0
-scikit-image==0.12.3
-homura==0.1.3
-boto==2.39.0
-polyline==1.3
-geocoder==1.9.0
-matplotlib==1.5.1
+scipy>=0.17.0
+scikit-image>=0.12.3
+homura>=0.1.3
+boto>=2.39.0
+polyline>=1.3
+geocoder>=1.9.0
+matplotlib>=1.5.1
