--- a/requirements.txt
+++ b/requirements.txt
@@ -3,7 +3,7 @@ requests~=2.7
 python-dateutil>=2.5.1,<3.*
 numpy>=1.10.4,<2.*
 termcolor~=1.1
-rasterio~=0.36
+rasterio>=0.36
 six~=1.8
 scipy>=0.17
 scikit-image>=0.12.3,<1.*
