--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ numpy>=1.10.4,<2.*
 termcolor~=1.1
 rasterio~=0.36
 six~=1.8
-scipy~=0.17
+scipy>=0.17
 scikit-image>=0.12.3,<1.*
 homura>=0.1.3,<1.*
 boto~=2.39
